# alfalfa-rl-project

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  docker-compose.yml  kpis.ipynb  post-process.ipynb  pyproject.toml  requirements.txt  rl_fmu_base.py  rl_fmu_simple_1_zone_heating.py  rl_fmu_single_zone_vav.py  rl_fmu_single_zone_vav_02.py  rl_fmu_single_zone_vav_03.py  rl_fmu_single_zone_vav_baseline.py  rl_osm_base.py  rl_osm_pid.py  setup.cfg  spawn_fmu_base.py
client/: boptest.py  requirements.txt
client/rl-1/: rl-base.py
client/rl-example/: kpis.ipynb  post-process.ipynb  rl-base-pid.py  rl-base.py  rl-fmu-base.py  rl-fmu-single-zone-vav.py  rl-fmu-single_zone_vav.py  rl-fmu-single_zone_vav_02.py  rl-fmu-single_zone_vav_03.py  rl_fmu_base.py  rl_fmu_simple_1_zone_heating.py  rl_fmu_single_zone_vav.py  rl_fmu_single_zone_vav_02.py  rl_fmu_single_zone_vav_03.py  rl_fmu_single_zone_vav_baseline.py
client/test/: .fmu-demo.py.swp  .osm-simbuild2.py.swp  README.md  RefBuildingSmallOffice2013_270.osm  RefBuildingSmallOffice2013_281.osm  (+3 more)
fmus/: .gitignore  README.md  data_manager.py  jm_ipython.sh
lib/: historian.py  thermal_comfort.py  unit_conversions.py
openstudio_model/: .gitignore  SmallOffice_VAV_Base.osm
results_rl_fmu_simple_1_zone_heating/: rl_fmu_simple_1_zone_heating.csv
results_rl_fmu_single_zone_vav/: kpis_result.json  rl_fmu_single_zone_vav.csv  rl_fmu_single_zone_vav.pkl
results_rl_fmu_single_zone_vav_02/: kpis_result.json
results_rl_fmu_single_zone_vav_03/: kpis_result.json
results_rl_fmu_single_zone_vav_baseline/: kpis_result.json
web/: Dockerfile  package-lock.json
(+152 files in other folders)
