[tool.poetry]
name = "alfalfa-rl-project"
version = "0.1.0"
description = ""
authors = ["Nicholas Long <nicholas.long@nrel.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
seaborn = "^0.11.1"
Keras = "^2.4.3"
tensorflow = "^2.6.1"
#alfalfa-client = "^0.1.0b1"
#alfalfa-client = {path = "../alfalfa-client", develop = true}
alfalfa-client = {git = "https://git@github.com/nrel/alfalfa-client.git", rev = "develop"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
