# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[options.packages.find]

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    .eggs
    build
    dist
    fmus/jmodelica.py
ignore=E402,E501,E731,W503,W504
max-line-length=123
